# flow123d-package

./: .gitignore  Makefile  README.md
project/: CMakeLists.txt
project/src/docker/create/default/: Dockerfile
project/src/docker/create/geomop/: Dockerfile  setup.sh
project/src/linux/: fterm.sh  install.sh  runtest.sh
project/src/windows/: .gitignore  LICENSE.txt  create_shortcuts.sh  install.bat  install.nsi  install.ps1  mounts.sh  uninstall.ps1
project/src/windows/win/: fterm.bat  remove-docker-toolbox.ps1
